--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/anton": "^5.0.5",
+    "@fontsource/passion-one": "^5.0.5",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "vue": "^3.3.4"
   },
   "devDependencies": {
