--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@fontsource/anton": "^5.0.5",
     "@fontsource/passion-one": "^5.0.5",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "vue": "^3.3.4"
